--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
     content="A Discord bot based on a text adventure game. Begin your journey in a medieval world to win the kingdom's princess's hand.">
-  <meta property='og:image' content='public/logo.png'/>
+  <meta property='og:image' content='public/ressources/logo.png'/>
   <meta property="og:site_name" content="draftbot.tk"/>
 
   <!-- Favicon -->
@@ -52,7 +52,7 @@
 <body>
   <div class="hero-bg">
     <header>
-      <a class="logo" href="/"><img src="/images/logo.png" alt="logo"></a>
+      <a class="logo" href="/"><img src="public/ressources/banner.png" alt="logo"></a>
       <nav>
         <ul class="nav__links">
           <li><a href="#about">About</a></li>
@@ -88,7 +88,7 @@
 
     <div class="hero-infos">
       <div class="title">A Discord Adventure</div>
-      <div class="description">The story takes place in a medieval world where the player embodies an adventurer who wants<br>to win a competition launched by the king, to win the princess' hand.</div>
+      <div class="description">The story takes place in a medieval world where the player embodies an adventurer who wants<br>to win a competition launched by the king, to win the princess's hand.</div>
       <a href="/invite" class="button buttonWhite buttonLarge" style="margin-top: 24px"><i
           class="fab fa-discord buttonIcon"></i>
         Add to Discord</a>
@@ -152,7 +152,7 @@
   <section class="largeMargin" id="about">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <img src="/images/question.svg" class="question" id="pc-content">
+        <img src="public/ressources/logo-retro.png" class="question" id="pc-content">
       </div>
       <div class="div-2">
         <div class="description">
