--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
     content="A Discord bot based on a text adventure game. Begin your journey in a medieval world to win the kingdom's princess's hand.">
-  <meta property='og:image' content='public/ressources/logo.png'/>
-  <meta property="og:site_name" content="draftbot.tk"/>
+  <meta property='og:image' content='https://bastlast.github.io/DraftBot-A-Discord-Adventure/public/ressources/logo.png'/>
+  <meta property="og:site_name" content="draftbot.draft"/>
 
   <!-- Favicon -->
-  <link href="public/ressources/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-  <link href="public/ressources/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="/public/ressources/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+  <link href="/public/ressources/favicon.ico" rel="icon" type="image/x-icon"/>
 
-  <link rel="stylesheet" href="public/css/home.css">
+  <link rel="stylesheet" href="/public/css/home.css">
 
   <script type="text/javascript">
     (function () {
@@ -52,7 +52,7 @@
 <body>
   <div class="hero-bg">
     <header>
-      <a class="logo" href="/"><img src="public/ressources/banner.png" alt="logo"></a>
+      <a class="logo" href="/"><img src="/public/ressources/banner.png" alt="logo"></a>
       <nav>
         <ul class="nav__links">
           <li><a href="#about">About</a></li>
