--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <meta property="og:site_name" content="draftbot.draft"/>
 
   <!-- Favicon -->
-  <link href="/public/ressources/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-  <link href="/public/ressources/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="public/ressources/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+  <link href="public/ressources/favicon.ico" rel="icon" type="image/x-icon"/>
 
-  <link rel="stylesheet" href="/public/css/home.css">
+  <link rel="stylesheet" href="public/css/home.css">
 
   <script type="text/javascript">
     (function () {
@@ -35,24 +35,12 @@
     crossorigin="anonymous" />
 
   <script src="/utils/Utils.js"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108500515-2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-108500515-2');
-  </script>
 </head>
 
 <body>
   <div class="hero-bg">
     <header>
-      <a class="logo" href="/"><img src="/public/ressources/banner.png" alt="logo"></a>
+      <a class="logo" href="/"><img src="public/ressources/banner.png" alt="logo"></a>
       <nav>
         <ul class="nav__links">
           <li><a href="#about">About</a></li>
