--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
         <nav>
           <ul class="nav__links">
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a target="__blank" href="https://utip.io/mw3y">Support Us</a></li>
-            <li><a target="__blank" href="https://github.com/Mw3y/Suivix">Github</a></li>
-            <li><a href="/support">Technical Support</a></li>
+            <li><a target="__blank" href="/donations">Donations</a></li>
+            <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
+            <li><a href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
           </ul>
         </nav>
         <div class="dropdown">
@@ -67,10 +66,9 @@
         <a class="close">&times;</a>
         <div class="overlay__content">
           <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a target="__blank" href="https://utip.io/mw3y">Support Us</a></li>
-          <li><a target="__blank" href="https://github.com/Mw3y/Suivix">Github</a></li>
-          <li><a href="/support">Technical Support</a></li>
+          <li><a target="__blank" href="/donations">Donations</a></li>
+          <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
+          <li><a href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
           <li><a href="/fr">Passer en Français</a></li>
         </div>
       </div>
