updates home page

--- a/index.html
+++ b/index.html
@@ -135,11 +135,10 @@
       </svg>
     </div>
   </div>
-
-  <section class="largeMargin" id="about">
+  <section class="" id="about">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <img src="public/ressources/logo-retro.png" class="question" id="pc-content">
+        <img src="public/ressources/example.jpg" class="question" id="pc-content">
       </div>
       <div class="div-2">
         <div class="description">
@@ -147,13 +146,9 @@
             About
           </h1>
           <div class="text">
-            Suivix is a Discord bot which allows you to take attendance on Discord.
-            It uses an online interface to make your experience more pleasant, simple and efficient.
-            <br><br>
-            For more information use <code>!suivix help</code>.
-            <br><br>
-            Your attendance result contains the date & the absent and present students names. You can find an example <a
-              href="https://suivix.xyz/ressources/example2.png" target="__blank">here</a>.
+            <b>Draftbot is a simple rp Discord bot.</b> Use the <code>!report</code> command and choose your action,
+            earns money, stuff, and points, and use them to buy potions or stuff in the shop, fight other players,
+            create your guild and ascend the leaderboards.
           </div>
         </div>
       </div>
@@ -165,15 +160,17 @@
       <div class="div-1">
         <div class="description">
           <h1 class="title">
-            A simple user interface
+            A fully open-source project !
           </h1>
           <div class="text">
-            The Suivix interface is especially designed to make your attendance quick and easy.
+            The whole community work together to create and improve the game experience. Your help is more than welcome!
+            You can follow our progress <a href="https://github.com/BastLast/DraftBot-A-Discord-Adventure"
+              target="__blank">here on github!</a>
           </div>
         </div>
       </div>
       <div class="div-2">
-        <img src="/images/illustration.png" class="illustration" id="pc-content">
+        <img src="public/ressources/github.png" class="question" id="pc-content">
       </div>
     </div>
   </section>
@@ -181,16 +178,15 @@
   <section class="largeMargin" id="about">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <img src="/images/flexible.svg" class="question" id="pc-content">
+        <img src="public/ressources/github.png" class="question" id="pc-content">
       </div>
       <div class="div-2">
         <div class="description">
           <h1 class="title">
-            Match most of the situations
+            No permission required
           </h1>
           <div class="text">
-            To take attendance, you can choose up to 4 voice channels and 6 different roles. For example, you can split
-            your class into groups.
+
           </div>
         </div>
       </div>
