--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
     <div class="container">
 
       <p class="copyright center">
-        Copyright ©
-        <var id="year">2020</var> All rights reserved | Made with <i class="fas fa-heart"></i> by <a
-          href="https://behance.net/mw3y" target="_blank">MΛX</a> (Maxence ESPAGNET), icons from <a
-          href="https://icons8.com" target="_blank">icons8.com</a> & background by <a
-          href='https://fr.freepik.com/vecteurs-libre/camp-ete-tente-feu-camp-lac_7588841.htm'>upklyak -
+        MIT License -
+        <var id="year">2020</var> | Made with <i class="fas fa-heart"></i> by <a href="https://behance.net/mw3y"
+          target="_blank">MΛX</a> and <a href="https://twitter.com/Bastlast_" target="_blank">BastLast</a>, icons from
+        <a href="https://icons8.com" target="_blank">icons8.com</a> &
+        background by <a
+          href='https://www.freepik.com/free-vector/medieval-castle-interior-flat-cartoon-composition-with-king-throne-armed-knight-coat-arms-guard_6845842.htm'>macrovector
+          -
           fr.freepik.com</a>
-        <br>Special thanks to <strong>"Un_phoque"</strong> (French Developer), <strong>"Michaël Morival"</strong> &
-        <strong>"espagnf"</strong> (French Professors). Version <var id="version">3.8</var>.
       </p>
 
     </div>
