removed contactform #185 add permission text #188

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
       </svg>
     </div>
   </div>
-  <section class="" id="about">
+  <section class="smallMargin" id="about">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <img src="public/ressources/example.jpg" class="question" id="pc-content">
+        <img src="public/ressources/example.jpg" class="screen" id="pc-content">
       </div>
       <div class="div-2">
         <div class="description">
@@ -155,7 +155,7 @@
     </div>
   </section>
 
-  <section id="simple-and-efficient" class="largeMargin background">
+  <section id="simple-and-efficient" class="mediumMargin background">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="description">
@@ -175,10 +175,10 @@
     </div>
   </section>
 
-  <section class="largeMargin" id="about">
+  <section class="mediumMargin" id="about">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <img src="public/ressources/github.png" class="question" id="pc-content">
+        <img src="public/ressources/permissionsHundreds.png" class="screen longScreen" id="pc-content">
       </div>
       <div class="div-2">
         <div class="description">
@@ -186,35 +186,30 @@
             No permission required
           </h1>
           <div class="text">
-
+            The bot only need basics permissions <b>in one channel</b> to be fully functionnal!
+            All the features are unlocked without giving access to your precious server
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="largeMargin background" style="padding-bottom: 150px;" id="contact">
-    <div data-aos="fade-up" data-aos-duration="700">
-      <h1 class="form-title center">
-        Contact Us
-      </h1>
-      <div class="form-description center">
-        If you have any question or you want to contact us, please use this form.
+  <section id="simple-and-efficient" class="mediumMargin background" style="padding-bottom: 150px;">
+    <div class="container" data-aos="fade-up" data-aos-duration="700">
+      <div class="div-1">
+        <div class="description">
+          <h1 class="title">
+            A fully open-source project !
+          </h1>
+          <div class="text">
+            The whole community work together to create and improve the game experience. Your help is more than welcome!
+            You can follow our progress <a href="https://github.com/BastLast/DraftBot-A-Discord-Adventure"
+              target="__blank">here on github!</a>
+          </div>
+        </div>
       </div>
-      <div class="container">
-        <form action="https://formspree.io/xwkrejdo" method="post" class="form center">
-          <input type="text" style="float: left;" class="form-control min-form" name="fname" placeholder="First name">
-          <input type="text" style="float: right;" class="form-control min-form" name="lname" placeholder="Full name">
-          <input type="email" class="form-control large-form" name="email" placeholder="Email address">
-          <input type="text" class="form-control large-form" name="subject" placeholder="Subject of the message">
-          <textarea name="message" rows="5" class="form-control large-form"
-            placeholder="Type your message here.."></textarea>
-
-          <button type="submit" id="send-form" class="button buttonGrey buttonLarge"><i
-              class="fas fa-chevron-right buttonIcon"></i></i> Send Message</button>
-
-        </form>
-
+      <div class="div-2">
+        <img src="public/ressources/github.png" class="question" id="pc-content">
       </div>
     </div>
     <div class="waves">
@@ -223,48 +218,48 @@
           <stop offset="0%" stop-color="#fff" />
         </linearGradient>
         <path fill="url(#grad1)" d="
-                    M0 67
-                    C 273,183
-                    822,-40
-                    1920.00,106
-                    V 359
-                    H 0
-                    V 67
-                    Z">
+                        M0 67
+                        C 273,183
+                        822,-40
+                        1920.00,106
+                        V 359
+                        H 0
+                        V 67
+                        Z">
           <animate repeatCount="indefinite" fill="url(#grad1)" attributeName="d" dur="35s" attributeType="XML" values="
-                    M0 77
-                    C 473,283
-                    822,-40
-                    1920,116
-                    V 359
-                    H 0
-                    V 67
-                    Z;
-                    M0 77
-                    C 473,-40
-                    1222,283
-                    1920,136
-                    V 359
-                    H 0
-                    V 67
-                    Z;
-                    M0 77
-                    C 973,260
-                    1722,-53
-                    1920,120
-                    V 359
-                    H 0
-                    V 67
-                    Z;
-                    M0 77
-                    C 473,283
-                    822,-40
-                    1920,116
-                    V 359
-                    H 0
-                    V 67
-                    Z
-                    ">
+                        M0 77
+                        C 473,283
+                        822,-40
+                        1920,116
+                        V 359
+                        H 0
+                        V 67
+                        Z;
+                        M0 77
+                        C 473,-40
+                        1222,283
+                        1920,136
+                        V 359
+                        H 0
+                        V 67
+                        Z;
+                        M0 77
+                        C 973,260
+                        1722,-53
+                        1920,120
+                        V 359
+                        H 0
+                        V 67
+                        Z;
+                        M0 77
+                        C 473,283
+                        822,-40
+                        1920,116
+                        V 359
+                        H 0
+                        V 67
+                        Z
+                        ">
           </animate>
         </path>
       </svg>
