links main buttons

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
       <div class="hero-infos">
         <div class="title">Draftbot - A Discord Adventure</div>
-        <a href="/invite" class="button buttonWhite buttonLarge" style="margin-top: 24px"><i
-            class="fab fa-discord buttonIcon"></i>
+        <a href="https://discordapp.com/api/oauth2/authorize?client_id=448110812801007618&permissions=280640&scope=bot"
+          class="button buttonWhite buttonLarge" style="margin-top: 24px"><i class="fab fa-discord buttonIcon"></i>
           Add to Discord</a>
-        <a href="/servers" class="button buttonGrey buttonLarge buttonUse"><i
-            class="fas fa-chevron-right buttonIcon"></i>More infos</a>
+        <a href="https://discord.gg/WwgBfSg" class="button buttonGrey buttonLarge buttonUse"><i
+            class="fas fa-chevron-right buttonIcon"></i>Join the community!</a>
       </div>
     </div>
     <div class="waves">
