disable french part for the moment #187

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li><a href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
           </ul>
         </nav>
+        <!-- TODO: 
         <div class="dropdown">
           <a class="button buttonWhite buttonSmall bold buttonLanguage" id="pc-menu"><i
               class="fas fa-globe-americas buttonSmallIcon"></i> EN</a>
@@ -57,6 +58,7 @@
             <a href="/fr"><i class="fas fa-angle-right buttonSmallIcon"></i> FR</a>
           </div>
         </div>
+      -->
         <div class="menu">
           <p class="button buttonWhite buttonSmall bold">Menu</p>
         </div>
@@ -69,7 +71,9 @@
           <li><a target="__blank" href="/donations">Donations</a></li>
           <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
           <li><a href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
-          <li><a href="/fr">Passer en Français</a></li>
+          <!-- TODO: 
+            <li><a href="/fr">Passer en Français</a></li>
+          -->
         </div>
       </div>
 
