--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <a class="logo" href="/"><img src="public/ressources/banner.png" alt="logo"></a>
         <nav>
           <ul class="nav__links">
-            <li><a href="#about">About</a></li>
+            <li><a href="guide.draftbot.com">About</a></li>
+            <li><a href="#add">Add the bot to your server</a></li>
             <li><a target="__blank" href="/donations">Donations</a></li>
             <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
             <li><a href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
@@ -67,7 +68,8 @@
       <div class="overlay">
         <a class="close">&times;</a>
         <div class="overlay__content">
-          <li><a href="#about">About</a></li>
+          <li><a href="guide.draftbot.com">About</a></li>
+          <li><a href="#add">Add the bot to your server</a></li>
           <li><a target="__blank" href="/donations">Donations</a></li>
           <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
           <li><a href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
@@ -79,11 +81,11 @@
 
       <div class="hero-infos">
         <div class="title">Draftbot - A Discord Adventure</div>
-        <a href="https://discordapp.com/api/oauth2/authorize?client_id=448110812801007618&permissions=280640&scope=bot"
-          class="button buttonWhite buttonLarge" style="margin-top: 24px"><i class="fab fa-discord buttonIcon"></i>
-          Add to Discord</a>
-        <a href="https://discord.gg/WwgBfSg" class="button buttonGrey buttonLarge buttonUse"><i
-            class="fas fa-chevron-right buttonIcon"></i>Join the community!</a>
+        <a href="https://discord.gg/WwgBfSg" class="button buttonWhite buttonLarge" style="margin-top: 24px"><i
+            class="fab fa-discord buttonIcon"></i>
+          Join the community!</a>
+        <a href="guide.draftbot.com" class="button buttonGrey buttonLarge buttonUse"><i
+            class="fas fa-chevron-right buttonIcon"></i>Read the player guide!</a>
       </div>
     </div>
     <div class="waves">
@@ -139,32 +141,45 @@
       </svg>
     </div>
   </div>
-  <section class="smallMargin" id="about">
+  <section class="verySmallMargin" id="imgExample">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
+      <img src="public/ressources/example-white.png" class="screen" id="pc-content">
+    </div>
+  </section>
+  <section id="about">
+    <div class="container smallMargin smallMarginBottom" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <img src="public/ressources/example.jpg" class="screen" id="pc-content">
+        <div class="description">
+          <h1 class="title">
+            Start your adventure...
+          </h1>
+          <div class="text">
+            <b>Draftbot is a simple rp Discord bot.</b> Use the <code>!report</code> command and choose your action,
+            earn money, stuff, and points, and use them to buy potions or stuff in the shop, fight other players,
+            create your guild and ascend the leaderboards.
+          </div>
+        </div>
       </div>
       <div class="div-2">
         <div class="description">
           <h1 class="title">
-            About
+            ... and write the next chapter
           </h1>
           <div class="text">
-            <b>Draftbot is a simple rp Discord bot.</b> Use the <code>!report</code> command and choose your action,
-            earns money, stuff, and points, and use them to buy potions or stuff in the shop, fight other players,
-            create your guild and ascend the leaderboards.
+            <b>Draftbot's story can is written by the players!</b> You can join the community and help us write the
+            story for all the players. We are also searching for testers and translators!
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="simple-and-efficient" class="mediumMargin background">
+  <section id="open-source" class="mediumMargin background">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="description">
           <h1 class="title">
-            A fully open-source project !
+            A fully open-source project!
           </h1>
           <div class="text">
             The whole community work together to create and improve the game experience. Your help is more than welcome!
@@ -179,7 +194,7 @@
     </div>
   </section>
 
-  <section class="mediumMargin" id="about">
+  <section class="mediumMargin" id="permissions">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <img src="public/ressources/permissionsHundreds.png" class="screen longScreen" id="pc-content">
@@ -187,23 +202,25 @@
       <div class="div-2">
         <div class="description">
           <h1 class="title">
-            No permission required
+            Add the bot to your server!
           </h1>
           <div class="text">
             The bot only need basics permissions <b>in one channel</b> to be fully functionnal!
-            All the features are unlocked without giving access to your precious server
+            All the features are unlocked without giving access to your precious server's admin pannel.
+            <br><b>Join the DraftBot's discord server to add the bot to your server: <a
+                href="https://discord.com/invite/5JqrMtZ" target="__blank">Click here!</a></b>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="simple-and-efficient" class="mediumMargin background" style="padding-bottom: 150px;">
+  <section id="add" class="mediumMargin background" style="padding-bottom: 150px;">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="description">
           <h1 class="title">
-            A fully open-source project !
+            Add the bot to your server!
           </h1>
           <div class="text">
             The whole community work together to create and improve the game experience. Your help is more than welcome!
