--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             class="fab fa-discord buttonIcon"></i>
           Join the community!</a>
         <a href="guide.draftbot.com" class="button buttonGrey buttonLarge buttonUse"><i
-            class="fas fa-chevron-right buttonIcon"></i>Read the player guide!</a>
+            class="fas fa-chevron-right buttonIcon"></i>Read the player's guide!</a>
       </div>
     </div>
     <div class="waves">
@@ -149,7 +149,7 @@
   <section id="about">
     <div class="container smallMargin smallMarginBottom" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <div class="description">
+        <div class="text-left">
           <h1 class="title">
             Start your adventure...
           </h1>
@@ -161,7 +161,7 @@
         </div>
       </div>
       <div class="div-2">
-        <div class="description">
+        <div class="text-right">
           <h1 class="title">
             ... and write the next chapter
           </h1>
