--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a class="logo" href="/"><img src="public/ressources/banner.png" alt="logo"></a>
         <nav>
           <ul class="nav__links">
-            <li><a href="guide.draftbot.com">About</a></li>
+            <li><a href="http://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
             <li><a target="__blank" href="/donations">Donations</a></li>
             <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
@@ -143,10 +143,8 @@
   </div>
   <section class="verySmallMargin" id="imgExample">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
-      <img src="public/ressources/example-white.png" class="screen" id="pc-content">
+      <img src="public/ressources/example-white.png" class="screen pc-content">
     </div>
-  </section>
-  <section id="about">
     <div class="container smallMargin smallMarginBottom" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="text-left">
@@ -189,7 +187,7 @@
         </div>
       </div>
       <div class="div-2">
-        <img src="public/ressources/github.png" class="question" id="pc-content">
+        <img src="public/ressources/github.png" class="question pc-content">
       </div>
     </div>
   </section>
@@ -197,7 +195,7 @@
   <section class="mediumMargin" id="permissions">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <img src="public/ressources/permissionsHundreds.png" class="screen longScreen" id="pc-content">
+        <img src="public/ressources/permissionsHundreds.png" class="screen longScreen pc-content">
       </div>
       <div class="div-2">
         <div class="description">
@@ -230,7 +228,7 @@
         </div>
       </div>
       <div class="div-2">
-        <img src="public/ressources/github.png" class="question" id="pc-content">
+        <img src="public/ressources/github.png" class="question pc-content">
       </div>
     </div>
     <div class="waves">
