end main page #188

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <img src="public/ressources/example-white.png" class="screen pc-content">
     </div>
-    <div class="container smallMargin smallMarginBottom" data-aos="fade-up" data-aos-duration="700">
+    <div class="container smallMargin-pc smallMarginBottom" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="text-left">
           <h1 class="title">
@@ -158,7 +158,7 @@
           </div>
         </div>
       </div>
-      <div class="div-2">
+      <div class="pc-content">
         <div class="text-right">
           <h1 class="title">
             ... and write the next chapter
@@ -192,7 +192,7 @@
     </div>
   </section>
 
-  <section class="mediumMargin" id="permissions">
+  <section class="mediumMargin" id="add">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <img src="public/ressources/permissionsHundreds.png" class="screen longScreen pc-content">
@@ -213,22 +213,21 @@
     </div>
   </section>
 
-  <section id="add" class="mediumMargin background" style="padding-bottom: 150px;">
+  <section id="" class="background" style="padding-bottom: 150px;">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="description">
           <h1 class="title">
-            Add the bot to your server!
+            Read the guide!
           </h1>
           <div class="text">
-            The whole community work together to create and improve the game experience. Your help is more than welcome!
-            You can follow our progress <a href="https://github.com/BastLast/DraftBot-A-Discord-Adventure"
-              target="__blank">here on github!</a>
+            We wrote a complete guide to help you start your adventure and contribute to the project! You can learn
+            everything about the project <a href="https://guide.draftbot.com" target="__blank">here on gitbook!</a>
           </div>
         </div>
       </div>
       <div class="div-2">
-        <img src="public/ressources/github.png" class="question pc-content">
+        <img src="public/ressources/logo-retro.png" class="Bigquestion pc-content">
       </div>
     </div>
     <div class="waves">
