donation button link #186

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <a class="logo" href="/"><img src="public/ressources/banner.png" alt="logo"></a>
         <nav>
           <ul class="nav__links">
-            <li><a href="http://guide.draftbot.com">About</a></li>
+            <li><a target="__blank" href="http://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
-            <li><a target="__blank" href="/donations">Donations</a></li>
+            <li><a target="__blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
             <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
-            <li><a href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
+            <li><a target="__blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
           </ul>
         </nav>
         <!-- TODO: 
@@ -68,11 +68,11 @@
       <div class="overlay">
         <a class="close">&times;</a>
         <div class="overlay__content">
-          <li><a href="guide.draftbot.com">About</a></li>
+          <li><a target="__blank" href="guide.draftbot.com">About</a></li>
           <li><a href="#add">Add the bot to your server</a></li>
-          <li><a target="__blank" href="/donations">Donations</a></li>
+          <li><a target="__blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
           <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
-          <li><a href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
+          <li><a target="__blank" href="https://discord.com/invite/5JqrMtZ">Technical Support</a></li>
           <!-- TODO: 
             <li><a href="/fr">Passer en Français</a></li>
           -->
