--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a class="logo" href="/"><img src="public/ressources/banner.png" alt="logo"></a>
         <nav>
           <ul class="nav__links">
-            <li><a target="__blank" href="http://guide.draftbot.com">About</a></li>
+            <li><a target="__blank" href="https://guide.draftbot.com">About</a></li>
             <li><a href="#add">Add the bot to your server</a></li>
             <li><a target="__blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
             <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
@@ -68,7 +68,7 @@
       <div class="overlay">
         <a class="close">&times;</a>
         <div class="overlay__content">
-          <li><a target="__blank" href="guide.draftbot.com">About</a></li>
+          <li><a target="__blank" href="https://guide.draftbot.com">About</a></li>
           <li><a href="#add">Add the bot to your server</a></li>
           <li><a target="__blank" href="https://github.com/sponsors/BastLast">Donate</a></li>
           <li><a target="__blank" href="https://github.com/BastLast/DraftBot-A-Discord-Adventure">Github</a></li>
@@ -84,7 +84,7 @@
         <a href="https://discord.gg/WwgBfSg" class="button buttonWhite buttonLarge" style="margin-top: 24px"><i
             class="fab fa-discord buttonIcon"></i>
           Join the community!</a>
-        <a href="guide.draftbot.com" class="button buttonGrey buttonLarge buttonUse"><i
+        <a href="https://guide.draftbot.com" class="button buttonGrey buttonLarge buttonUse"><i
             class="fas fa-chevron-right buttonIcon"></i>Read the player's guide!</a>
       </div>
     </div>
