--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
           </h1>
           <div class="text">
             <b>Draftbot is a simple rp Discord bot.</b> Use the <code>!report</code> command and choose your action,
-            earn money, stuff, and points, and use them to buy potions or stuff in the shop, fight other players,
-            create your guild and ascend the leaderboards.
+            earn money, stuff, points, and use them to buy stuff in the shop, fight other players,
+            create your guild, and ascend the leaderboards.
           </div>
         </div>
       </div>
@@ -164,8 +164,8 @@
             ... and write the next chapter
           </h1>
           <div class="text">
-            <b>Draftbot's story can is written by the players!</b> You can join the community and help us write the
-            story for all the players. We are also searching for testers and translators!
+            <b>Draftbot's story is written by the players!</b> You can join the community and help us write stories for
+            all the players. We are also searching for testers and translators!
           </div>
         </div>
       </div>
@@ -180,8 +180,9 @@
             A fully open-source project!
           </h1>
           <div class="text">
-            The whole community work together to create and improve the game experience. Your help is more than welcome!
-            You can follow our progress <a href="https://github.com/BastLast/DraftBot-A-Discord-Adventure"
+            The whole community works together to create and improve the game experience. Your help is more than
+            welcome!
+            You can follow our progression <a href="https://github.com/BastLast/DraftBot-A-Discord-Adventure"
               target="__blank">here on github!</a>
           </div>
         </div>
@@ -203,7 +204,7 @@
             Add the bot to your server!
           </h1>
           <div class="text">
-            The bot only need basics permissions <b>in one channel</b> to be fully functionnal!
+            The bot only needs basic permissions <b>in one channel</b> to be fully functional!
             All the features are unlocked without giving access to your precious server's admin pannel.
             <br><b>Join the DraftBot's discord server to add the bot to your server: <a
                 href="https://discord.com/invite/5JqrMtZ" target="__blank">Click here!</a></b>
