--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div>
       </div>
       <div class="div-2">
-        <img src="public/ressources/github.png" class="question pc-content">
+        <img src="public/ressources/github.png" class="question invert pc-content">
       </div>
     </div>
   </section>
@@ -214,7 +214,7 @@
     </div>
   </section>
 
-  <section id="" class="background" style="padding-bottom: 150px;">
+  <section style="padding-bottom: 150px;">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
         <div class="description">
@@ -233,10 +233,7 @@
     </div>
     <div class="waves">
       <svg width="100%" height="175px" fill="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-          <stop offset="0%" stop-color="#fff" />
-        </linearGradient>
-        <path fill="url(#grad1)" d="
+        <path fill="#23272a" d="
                         M0 67
                         C 273,183
                         822,-40
@@ -245,7 +242,7 @@
                         H 0
                         V 67
                         Z">
-          <animate repeatCount="indefinite" fill="url(#grad1)" attributeName="d" dur="35s" attributeType="XML" values="
+          <animate repeatCount="indefinite" fill="#23272a" attributeName="d" dur="35s" attributeType="XML" values="
                         M0 77
                         C 473,283
                         822,-40
@@ -285,7 +282,7 @@
     </div>
   </section>
 
-  <footer id="footer" class="smallMargin">
+  <footer id="footer" class="smallPadding">
     <div class="container">
 
       <p class="copyright center">
