--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="A Discord bot based on a text adventure game. Begin your journey in a medieval world to win the kingdom's princess's hand.">
   <meta property='og:image'
-    content='https://bastlast.github.io/DraftBot-A-Discord-Adventure/public/ressources/logo.png' />
+    content='https://bastlast.github.io/DraftBot-A-Discord-Adventure/public/ressources/logo-min.png' />
   <meta property="og:site_name" content="draftbot.draft" />
 
   <!-- Favicon -->
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" href="public/css/home.css">
 
-  <script type="text/javascript">
+  <script>
     (function () {
       var css = document.createElement('link');
       css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css';
@@ -41,7 +41,7 @@
   <div class="hero-bg">
     <div class="test">
       <header>
-        <a class="logo" href="/"><img src="public/ressources/banner.png" alt="logo"></a>
+        <a class="logo" href="/"><img src="public/ressources/banner-min.png" alt="logo"></a>
         <nav>
           <ul class="nav__links">
             <li><a target="__blank" href="https://guide.draftbot.com">About</a></li>
@@ -143,7 +143,7 @@
   </div>
   <section class="verySmallMargin" id="imgExample">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
-      <img src="public/ressources/example-white.png" class="screen pc-content">
+      <img src="public/ressources/example-white-min.png" class="screen pc-content">
     </div>
     <div class="container smallMargin-pc smallMarginBottom" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
@@ -188,7 +188,7 @@
         </div>
       </div>
       <div class="div-2">
-        <img src="public/ressources/github.png" class="question invert pc-content">
+        <img src="public/ressources/github-min.png" class="question invert pc-content">
       </div>
     </div>
   </section>
@@ -196,7 +196,7 @@
   <section class="mediumMargin" id="add">
     <div class="container" data-aos="fade-up" data-aos-duration="700">
       <div class="div-1">
-        <img src="public/ressources/permissionsHundreds.png" class="screen longScreen pc-content">
+        <img src="public/ressources/permissionsHundreds-min.png" class="screen longScreen pc-content">
       </div>
       <div class="div-2">
         <div class="description">
@@ -228,7 +228,7 @@
         </div>
       </div>
       <div class="div-2">
-        <img src="public/ressources/logo-retro.png" class="Bigquestion pc-content">
+        <img src="public/ressources/logo-retro-min.png" class="Bigquestion pc-content">
       </div>
     </div>
     <div class="waves">
